# trackerstream

./: .gitignore  MVP-FOLLOWUP.md  MVP.md  NOTICES.md  P2P-FWD.md  P2P-NEXT-STEPS.md  PEER-ASSIST.md  README.md  STREAMING-COMPRESSED-IT-RESEARCH.md  STREAMING-PARITY-V2-SCHEMA.md  STREAMING-PARITY.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/scripts/: build-worklet.mjs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/examples/: bench.rs  fetch-check.rs  peer-bw-2node.rs  peer-bw-check.rs  seek.rs  soak.rs  stream-check.rs
apps/desktop/src-tauri/examples/common/: mod.rs
apps/desktop/src-tauri/patches/: 0001-bitswap-peer-attribution.patch  0002-nat-public.patch  0003-unixfs-cat-range.patch
apps/desktop/src-tauri/scripts/: prepare-ipfs.sh  prepare-sidecar.sh
apps/desktop/src-tauri/src/: catalog.rs  ipfs.rs  ipns.rs  lib.rs  peer.rs  pinglog.rs  rpc.rs  sidecar.rs  tracker.rs
apps/desktop/src-tauri/tests/: client_seam_it.rs
apps/desktop/src/lib/: catalog.ts  debug.ts  deeplink.ts  format.ts  p2p.ts  peers.svelte.ts  player.svelte.ts  social.svelte.ts  theme.css
apps/desktop/src/lib/audio/: ModPlayer.svelte.ts  blocks.ts  fence.ts  messages.ts  player.worklet.ts
apps/desktop/src/lib/components/: DetailPanel.svelte  NowPlaying.svelte  PeerDetail.svelte  PeersPanel.svelte  QueuePanel.svelte  ResultsTable.svelte  Sidebar.svelte  SocialPanel.svelte
apps/desktop/src/routes/: +page.svelte
apps/desktop/test/: crossfade-check.mjs  fence-test.mjs  worklet-harness.mjs
apps/server/: package.json
apps/server/src/: api.ts  catalog.ts  corpus.ts  ingest.ts  ipns.ts  meta.ts  oauth.ts  social.ts  tracker.ts
deploy/: Caddyfile  HETZNER-MIGRATION.md  RESERVED-IP.md  RESTORE.md  TSNODE-CUTOVER.md  backup.sh  build-artifact.sh  build-tsnode.sh  cutover-tsnode.sh  install.sh  journald-trackerstream.conf  metrics-export.sh  provision.sh  server.env.sample  setup-tls.sh  sync-archive.sh  turnserver.conf  verify-pinset.sh
deploy/systemd/: trackerstream-api.service  trackerstream-backup.service  trackerstream-backup.timer  trackerstream-ingest.service  trackerstream-ingest.timer  trackerstream-ipfs.service  trackerstream-metrics.service  trackerstream-metrics.timer  trackerstream-node.service
docs/: BUILD-SECOND-MAC.md  RELEASE.md
lab/: CACHE.md  CID.md  FINDINGS.md  SEEK.md  cid-dedup.mjs  it-impact.mjs  it-inspect.mjs  it-repack.mjs  it-repack2.mjs  it-static.mjs  it-verify.mjs  it-window.mjs  lib.mjs  mod-repack.mjs  package.json  seek-mechanics.mjs  seek-pack.mjs  seek-partial.mjs  ttfpb.mjs  warm-cache.mjs
node/: config.go  control.go  dht_test.go  fwd.go  fwd_test.go  go.mod  go.sum  identity.go  ipns.go  ipns_test.go  keystore.go  node.go  node_test.go  persistent_test.go  phased_test.go  pins.go  provide_test.go  pubsub.go  pubsub_test.go  rpc.go  rpc_test.go  serve_test.go  unixfs.go  unixfs_test.go  util.go
node/cmd/tsnode/: main.go
