[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Test-only: forge signed IPNS records (rust-ipns::Record::new takes a chrono
# Duration). Not in the shipping binary.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
rust-ipfs = "0.15"
# IPNS record decode + signature verify (off-DHT resolution of the future IPNS
# catalog). Already a transitive dep of the vendored rust-ipfs, so this just
# surfaces it directly — same version, no extra build. See PEER-ASSIST.md §9.
rust-ipns = { version = "0.8.1", default-features = false, features = ["libp2p"] }
base64 = "0.22"
sha2 = "0.11.0"
futures = "0.3.32"
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time"] }
# Trust the SYSTEM store (native-roots), not bundled Mozilla roots: users may sit
# behind a TLS-inspecting proxy (corporate/security networks re-sign with their own
# root, which lives in the OS store). Bare rustls-tls / webpki-roots reject that with
# "invalid peer certificate: UnknownIssuer" even though curl/the browser accept it.
# rustls-native-certs reads the OS trust store (no OpenSSL link).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
cid = { version = "0.11", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# Patched rust-ipfs (per-peer bitswap byte attribution — see patches/). The source
# is materialized to vendor/rust-ipfs by scripts/prepare-ipfs.sh, which MUST run
# before cargo (wired into tauri's beforeDev/BuildCommand; run it by hand for a
# bare `cargo build`). Mirrors the libopenmpt vendor-patch workflow.
[patch.crates-io]
rust-ipfs = { path = "vendor/rust-ipfs" }

