[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Test-only: forge signed IPNS records (rust-ipns::Record::new takes a chrono
# Duration). Not in the shipping binary. (The client-seam integration test in tests/ uses the
# main deps — reqwest/serde/tokio/serde_json — directly.)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
# The libp2p/IPFS node is now an external Go sidecar (tsnode) driven over RPC (src/rpc.rs,
# src/sidecar.rs) — no in-process rust-ipfs, no vendored fork, no patches.
# IPNS record decode + signature verify (the trust anchor; the Go node signs byte-compatibly).
rust-ipns = { version = "0.8.1", default-features = false, features = ["libp2p"] }
# PeerId / Keypair types for IPNS verify (rust-ipns's libp2p feature pulls this in; surface it).
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }
base64 = "0.22"
sha2 = "0.11.0"
futures = "0.3.32"
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time"] }
# Trust the SYSTEM store (native-roots), not bundled Mozilla roots: users may sit
# behind a TLS-inspecting proxy (corporate/security networks re-sign with their own
# root, which lives in the OS store). Bare rustls-tls / webpki-roots reject that with
# "invalid peer certificate: UnknownIssuer" even though curl/the browser accept it.
# rustls-native-certs reads the OS trust store (no OpenSSL link).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
cid = { version = "0.11", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
# Jitter for the announce/roster/master-reconnect loops: fixed intervals make every
# client retry in lockstep, a synchronized herd against the master rcmgr during a
# correlated outage. See P2P-NEXT-STEPS Phase 0.
rand = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
# Catalog-over-IPNS lazy query (R1): a read-only SQLite VFS that serves DB pages over
# Bitswap so a client fetches only the pages a query touches, not the whole catalog.
# `bundled` statically links one SQLite (FTS5 on by default); sqlite-vfs has NO
# libsqlite3-sys dep and resolves the C symbols against rusqlite's bundled copy, so the
# two unify to a single sqlite (lab spike `scratchpad/lab/vfs_spike` proved the link).
rusqlite = { version = "0.40.1", features = ["bundled"] }
sqlite-vfs = "0.2.0"

